--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -33,7 +33,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: url(https://media.giphy.com/media/q3k9yg1qoFzoy1D8du/source.gif) no-repeat top center, url(../images/header-background-2.jpg) no-repeat top center;
+   background: url(../images/header-background-2.jpg) no-repeat top center, url(https://media.giphy.com/media/q3k9yg1qoFzoy1D8du/source.gif) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
