Update colors & Links

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -112,7 +112,7 @@
 	   width: 48px;
 		height: 48px;
 		text-align: left;
-		background-color: #398f12;;
+		background-color: #dd8028;;
 		position: relative;
       border: none;
       float: right;
