--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -251,7 +251,7 @@ ul#nav li.current a { color: #dd8028; }
    letter-spacing: 1px;
 }
 #resume h1 span {
-   border-bottom: 3px solid #11ABB0;
+   border-bottom: 3px solid #dd8028;
    padding-bottom: 6px;
 }
 #resume h3 {
